Ensured text remains visible during webfont load

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -5,5 +5,6 @@
 @font-face{
     font-family: "Roboto";
     src: '../fonts/Roboto/Roboto-Regular.ttf';
+    font-display: swap;
 }
 
